# GoalForge-AI

./: .gitignore  .vercelignore  CLAUDE.md  DEPLOY.md  README.md  environment.yml  pyproject.toml  requirements.txt  vercel.json
api/: _engine.py  health.py  index.py  model.json  predict.py  squad.py  teams.py
configs/: default.yaml
docs/: evaluation.md  workflow.md
public/: app.js  index.html
scripts/: README.md  build_intl_lineups.py  build_player_form.py  build_wc2026_model.py  evaluate_scorers.py  export_model.py  fetch_understat.py  fetch_understat_pw.py  player_ml.py  train_neural.py
slurm/: README.md  env_setup.sh  predict.sbatch  train_gpu.sbatch  train_neural.sbatch
src/goalforge/: __init__.py
src/goalforge/api/: app.py
src/goalforge/data/: __init__.py
src/goalforge/evaluation/: __init__.py
src/goalforge/features/: __init__.py
src/goalforge/models/: __init__.py
src/goalforge/prediction/: __init__.py
src/goalforge/simulation/: __init__.py
src/goalforge/utils/: __init__.py
tests/: __init__.py  test_api.py  test_vercel_api.py
